# socks5-forwarder

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.ebpf  Dockerfile.ebpf.debian  Dockerfile.generic  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: cargo-test.yml
generic/: Cargo.toml
generic/src/: main.rs
probe/: Cargo.toml
probe/src/: lib.rs  main.rs
src/: main.rs
userspace/: Cargo.toml  build.rs
userspace/src/: main.rs  relay.rs  shared.rs  utils.rs
