[package]
name = "socks5-forwarder-generic"
version = "0.1.0"
authors = ["ihciah <ihciah@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ihciah/socks5-forwarder"
description = "Socks5 forwarder"
keywords = ["socks5", "forward", "tunnel", "proxy"]

[dependencies]
tokio-socks = "0.5"
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { version = "1.0", features = ["net", "rt", "rt-multi-thread", "macros"] }
anyhow = "1.0"
clap = "2.33.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[[bin]]
name = "socks5-forwarder"
path = "src/main.rs"
